# cafetera_hr_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.admin  Dockerfile.polling_vk  Dockerfile.rag_service  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.qoder/repowiki/en/content/: Configuration Management.md  Deployment and Operations.md  Document Management System.md  Getting Started.md  Keyboard System.md  Main Menu and Navigation.md  Project Overview.md  RAG Integration.md  State Management.md  Testing Strategy.md  Troubleshooting and FAQ.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Dependency Injection System.md  Document Management System.md  RAG Client Integration.md  RAG Microservice Architecture.md  Resource Management System.md
.qoder/repowiki/en/content/Configuration Management/: Configuration Management.md  LLM Providers Configuration.md  llama.cpp Installation and Configuration.md
.qoder/repowiki/en/content/Development Workflow/: Development Workflow.md  Main Application Entry Point.md
.qoder/repowiki/en/content/Handler System/: Fallback Handler.md  Handler System.md  Sections Handler.md  Start Handler.md
.qoder/repowiki/en/content/Project Overview/: Architecture Documentation.md  Project Overview.md
.qoder/repowiki/en/content/RAG Integration/: RAG Integration.md  RAG Parser Enhancement.md
.qoder/repowiki/en/content/Testing Strategy/: RAGAS Quality Evaluation Framework.md  Testing Strategy.md
.qoder/repowiki/en/content/Troubleshooting and FAQ/: System Troubleshooting and FAQ.md
.qoder/repowiki/en/content/VK Integration/: Admin Package Integration.md  Bot Factory.md  Category File Template Management System.md  Domain Content Management.md  Employment Lifecycle Management.md  HR Request Processing System.md  Handler Registration and Ordering.md  VK Integration.md  VKontakte API Integration Patterns.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/rules/: 00-architecture.md  01-python-style.md  02-rag-guidelines.md  03-fastapi-api.md  04-uv-workflow.md  05-tests.md  06-markdown-docs.md  07-bot-apis.md  08-resource-safety.md  09-security.md  10-doc-upload.md  11-frontend.md  12-admin-ui-design.md  13-python-uv-docker.md  14-agent-workflow.md
app/: config.py  main.py  resources.py
app/api/: category_files.py  deps.py  documents.py  documents_auth.py  documents_bulk.py  documents_helpers.py  documents_qa.py  documents_upload.py  schemas.py
app/domain/: category_file_service.py  content.py  document_service.py  entities.py  qa_service.py  topic_hints.py
app/integrations/vk/: attachments.py  bot.py  keyboards.py  rules.py  states.py
app/integrations/vk/handlers/: __init__.py  ask.py  fallback.py  fire.py  hire.py  hr_request.py  pay.py  sections.py  start.py  vacation.py
app/rag/: __init__.py  chain.py  colbert_embeddings.py  indexer.py  parser.py  prompts.py  retriever.py
app/storage/: category_models.py  category_repo.py  database.py  document_repo.py  models.py  s3.py
docs/: architecture.md  llama-params-guide.md  llamacpp.md  providers.md  ragas.md  troubleshooting.md
ragas/: _common.py  best_prompt.txt  evaluate.py  evaluate_retrieval.py  generate_testset.py  optimization_results.json  optimize_prompt.py  run.sh
scripts/: admin_server.py  common.sh  ingest.py  polling_vk.py  rag_server.py  run_admin.sh  run_admin_docker.sh  run_all.sh  run_llama_embeddings.sh  run_llama_llm.sh  run_llama_qwen.sh  run_llama_reranker.sh  run_ollama_embeddings.sh  run_ollama_llm.sh  run_ollama_qwen.sh  run_vk_bot_long_polling.sh
static/css/: style.css
static/js/: components.js  upload.js
templates/: base.html  category_files.html  documents.html  login.html
templates/partials/: category_slot.html  document_row.html  document_table.html  pagination.html  status_poller.html
tests/: conftest.py  test_api_documents.py  test_api_documents_auth.py  test_api_documents_bulk.py  test_api_documents_upload.py  test_ask_block9.py  test_bot_factory.py  test_category_file_service.py  test_category_files.py  test_category_hints.py  test_colbert_embeddings.py  test_config.py  test_content.py  test_document_service.py  test_entities.py  test_hybrid_rerank_retriever.py  test_hybrid_search.py  test_indexer.py  test_keyboards.py  test_keyboards_block2.py  test_parser.py  test_qa_service.py  test_qa_streaming_errors.py  test_rag_block6.py  test_rag_service_ingest.py  test_rag_stub_block3.py  test_rules.py  test_semantic_chunker.py  test_states.py  test_storage.py  test_text_processor.py
