[project]
name = "app"
version = "0.1.0"
description = "RAG bot backend with FastAPI, LangChain, Qdrant, Telegram and VK integrations"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.135.3",
  "hypercorn>=0.18.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "httpx>=0.28.1",
  "langchain>=0.3.0",
  "langchain-text-splitters>=1.1.1",
  "langchain-qdrant>=1.1.0",
  "langchain-experimental>=0.4.1",
  "qdrant-client>=1.17.1",
  "aiogram>=3.26.0",
  "vkbottle>=4.8.1",
  "python-docx>=1.2.0",
  "databases[asyncpg]>=0.9.0",
  "aiobotocore>=2.26.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.24",
  "tiktoken>=0.12.0",
  "sharepoint-to-text>=1.1.1",
  "openpyxl>=3.1.5",
  "fastembed>=0.8.0",
]

[project.optional-dependencies]
ollama = [
  "langchain-ollama>=1.1.0"
]

openai_compatible = [
  "langchain-openai>=1.1.12"
]

dev = [
  "ruff>=0.15.10",
  "mypy>=1.20.0",
  "types-openpyxl>=3.1.0"
]

test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "testcontainers[postgres]>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["requires_docker: tests that need Docker (Testcontainers)"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
