[project]
name = "app"
version = "0.1.0"
description = "RAG bot backend with FastAPI, LangChain, Qdrant, Telegram and VK integrations"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "cafetera-core",
    "cafetera-admin",
    "cafetera-vk-bot",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "types-openpyxl>=3.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cafetera-core = { workspace = true }
cafetera-admin = { workspace = true }
cafetera-vk-bot = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["requires_docker: tests that need Docker (Testcontainers)"]
pythonpath = ["packages/core/src", "packages/admin/src", "packages/vk_bot/src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["packages/core/src", "packages/admin/src", "packages/vk_bot/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
