[project]
name = "app"
version = "0.1.0"
description = "RAG bot backend with FastAPI, LangChain, Qdrant, Telegram and VK integrations"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "cafetera-core",
    "cafetera-admin",
    "cafetera-vk-bot",
    "cafetera-rag-service",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "types-openpyxl>=3.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.14.2",
    "ragas>=0.4.0",
    "openai>=1.0.0",
    "datasets>=3.0.0",
    "pandas>=3.0.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
override-dependencies = [
    # Force-exclude opencv-python (GUI) — Docker has no X11 libs.
    # opencv-python-headless is added explicitly in packages/rag_service.
    "opencv-python ; python_version < '0'",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cafetera-core = { workspace = true }
cafetera-admin = { workspace = true }
cafetera-vk-bot = { workspace = true }
cafetera-rag-service = { workspace = true }
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["requires_docker: tests that need Docker (Testcontainers)"]
pythonpath = [
    "packages/core/src",
    "packages/admin/src",
    "packages/vk_bot/src",
    "packages/rag_service/src",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = [
    "packages/core/src",
    "packages/admin/src",
    "packages/vk_bot/src",
    "packages/rag_service/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
